Fix grid columns being too small

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -53,7 +53,7 @@
   width: 99vw;
   display: grid;
   grid-template-rows: repeat(2, 350px);
-  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(460px, 1fr));
   justify-items: center;
   align-items: center;
 }
